[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "rca-profile-indices"
version = "0.1.0"
description = "script for indexing RCA shallow and deep profilers"
authors = [
  { name = "Joe Duprey", email = "jduprey@uw.edu" },
  { name = "Wendi Ruef", email = "wruef@uw.edu" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "xarray>=2024.11.0",
  "s3fs>2024.6.0",
  "loguru",
]

[project.scripts]
index-profiles = "profileIndexer_v3:main"

[tool.ruff]
line-length = 95